--- a/Client/Viewer/GamesControl/PointsViewerControl.xaml
+++ b/Client/Viewer/GamesControl/PointsViewerControl.xaml
@@ -5,10 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Client.Viewer.GamesControl"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="900" d:DesignWidth="1600">
     <Grid>
-        <MediaElement x:Name="mediaPoint" Source="../../Resources/Effects/PlayerPoints.mp4"/>
-        <Label x:Name="lblPoint" Content="360" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"  HorizontalAlignment="Left" Height="62" Margin="108,300,0,0" VerticalAlignment="Top" Width="106" Foreground="White" FontWeight="Bold" FontSize="40"/>
-        <Label x:Name="lblName" Content="Minh Hiếu" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="63" Margin="219,331,0,0" VerticalAlignment="Top" Width="287" Foreground="White" FontWeight="Bold" FontSize="28"/>
+        <MediaElement x:Name="mediaPoint" Source="../../Resources/Effects/PlayerPoints.mp4" LoadedBehavior="Manual"/>
+        <MediaElement Source="../../Resources/Effects/PlayerPoints.mp4"/>
+        <Label x:Name="lblPoint" Content="" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="124" Margin="217,600,0,0" VerticalAlignment="Top" Width="212" Foreground="White" FontWeight="Bold" FontSize="75"/>
+        <Label x:Name="lblName" Content="" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="126" Margin="438,662,0,0" VerticalAlignment="Top" Width="576" Foreground="White" FontWeight="Bold" FontSize="57"/>
     </Grid>
 </UserControl>
