--- a/Client/Viewer/GamesControl/FinishViewerControl.xaml
+++ b/Client/Viewer/GamesControl/FinishViewerControl.xaml
@@ -13,20 +13,33 @@
             <MediaElement x:Name="mediaStart" LoadedBehavior="Manual" MediaEnded="mediaStart_MediaEnded"/>
         </Grid>
         <Grid x:Name="gridQuestion">
-            <MediaElement x:Name="media10s" LoadedBehavior="Manual"/>
-            <MediaElement x:Name="media15s" LoadedBehavior="Manual"/>
-            <MediaElement x:Name="media20s" LoadedBehavior="Manual"/>
-            <Image x:Name="imgP1" Source="../../Resources/Effects/P1.png"/>
-            <Image x:Name="imgP2" Source="../../Resources/Effects/P2.png"/>
-            <Image x:Name="imgP3" Source="../../Resources/Effects/P3.png"/>
-            <Image x:Name="imgP4" Source="../../Resources/Effects/P4.png"/>
-            <compo:QNPBoxV2 x:Name="questionBox"/>
-        </Grid>
-        <Grid x:Name="gridPrac">
-        </Grid>
-        <Grid x:Name="grMedia">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="641*"/>
+                <RowDefinition Height="260*"/>
+            </Grid.RowDefinitions>
             <Grid.Background>
-                <SolidColorBrush Color="White"/>
+                <ImageBrush ImageSource="../../Resources/Effects/VD_QuesBackground.png"/>
+            </Grid.Background>
+            <MediaElement x:Name="media10s" LoadedBehavior="Manual" Grid.RowSpan="2" MediaEnded="media10s_MediaEnded"/>
+            <MediaElement x:Name="media15s" LoadedBehavior="Manual" Grid.RowSpan="2" MediaEnded="media15s_MediaEnded"/>
+            <MediaElement x:Name="media20s" LoadedBehavior="Manual" Grid.RowSpan="2" MediaEnded="media20s_MediaEnded"/>
+            <Image x:Name="imgP1" Source="../../Resources/Effects/P1.png" Visibility="Hidden" Grid.RowSpan="2"/>
+            <Image x:Name="imgP2" Source="../../Resources/Effects/P2.png" Visibility="Hidden" Grid.RowSpan="2"/>
+            <Image x:Name="imgP3" Source="../../Resources/Effects/P3.png" Visibility="Hidden" Grid.RowSpan="2"/>
+            <Image x:Name="imgP4" Source="../../Resources/Effects/P4.png" Visibility="Hidden" Grid.RowSpan="2"/>
+            <compo:QNPBoxV2 x:Name="questionBox" Grid.RowSpan="2"/>
+            <Rectangle x:Name="rectBell1" HorizontalAlignment="Left" Height="40" Margin="141,553,0,0" VerticalAlignment="Top" Width="261" Fill="#59FF0000"/>
+            <Rectangle x:Name="rectBell2" HorizontalAlignment="Left" Height="40" Margin="403,553,0,0" VerticalAlignment="Top" Width="261" Fill="#59FF0000"/>
+            <Rectangle x:Name="rectBell3" HorizontalAlignment="Left" Height="40" Margin="665,553,0,0" VerticalAlignment="Top" Width="261" Fill="#59FF0000"/>
+            <Rectangle x:Name="rectBell4" HorizontalAlignment="Left" Height="40" Margin="927,553,0,0" VerticalAlignment="Top" Width="261" Fill="#59FF0000"/>
+            <MediaElement x:Name="mediaStarAnimate" Source="../../Resources/Effects/VD_Star.gif" Margin="10,432,1362,8" LoadedBehavior="Manual"/>
+        </Grid>
+        <Grid x:Name="gridPrac" Visibility="Visible" Background="#FFF5EAD7">
+            <Label x:Name="lblTime" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontWeight="Bold" FontSize="170">60</Label>
+        </Grid>
+        <Grid x:Name="gridMedia" Visibility="Hidden">
+            <Grid.Background>
+                <SolidColorBrush Color="#FFF5EAD7"/>
             </Grid.Background>
             <MediaElement x:Name="media" LoadedBehavior="Manual"/>
         </Grid>
