a fuckton of things here

--- a/Client/PlayerClient/LogInWindow.xaml
+++ b/Client/PlayerClient/LogInWindow.xaml
@@ -7,13 +7,14 @@
         mc:Ignorable="d"
         Title="Đăng nhập" Height="150" Width="500" ResizeMode="NoResize" Unloaded="Window_Unloaded">
     <Grid>
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="411,0,0,0" VerticalAlignment="Center" Height="114" Width="79" Click="button_Click"/>
+        <Button x:Name="button" Content="Đăng nhập" HorizontalAlignment="Left" Margin="411,0,0,0" VerticalAlignment="Center" Height="114" Width="79" Click="button_Click"/>
         <Label Content="IP" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
         <Label Content="Cổng" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top"/>
         <Label Content="Vị trí" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txtIP" HorizontalAlignment="Left" Margin="67,14,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="txtPort" HorizontalAlignment="Left" Margin="67,45,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="txtS" HorizontalAlignment="Left" Margin="67,76,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="lblStatus" Content="" HorizontalAlignment="Left" Margin="208,23,0,0" VerticalAlignment="Top" Height="63"/>
 
     </Grid>
 </Window>
