--- a/Client/Viewer/GamesControl/FinishViewerControl.xaml
+++ b/Client/Viewer/GamesControl/FinishViewerControl.xaml
@@ -10,9 +10,11 @@
     <Grid>
         <Grid x:Name="gridPoint">
             <Image x:Name="backgroundPoint" Source="../../Resources/Effects/VD_Choosing.png"/>
+            <MediaElement x:Name="mediaBegin" LoadedBehavior="Manual" MediaEnded="mediaBegin_MediaEnded"/>
             <MediaElement x:Name="mediaStart" LoadedBehavior="Manual" MediaEnded="mediaStart_MediaEnded"/>
+            <compo:PointChoosing x:Name="pointChoosing"/>
         </Grid>
-        <Grid x:Name="gridQuestion">
+        <Grid x:Name="gridQuestion" Visibility="Hidden">
             <Grid.RowDefinitions>
                 <RowDefinition Height="641*"/>
                 <RowDefinition Height="260*"/>
@@ -34,7 +36,7 @@
             <Rectangle x:Name="rectBell4" HorizontalAlignment="Left" Height="40" Margin="927,553,0,0" VerticalAlignment="Top" Width="261" Fill="#59FF0000"/>
             <MediaElement x:Name="mediaStarAnimate" Source="../../Resources/Effects/VD_Star.gif" Margin="10,432,1362,8" LoadedBehavior="Manual"/>
         </Grid>
-        <Grid x:Name="gridPrac" Visibility="Visible" Background="#FFF5EAD7">
+        <Grid x:Name="gridPrac" Visibility="Hidden" Background="#FFF5EAD7">
             <Label x:Name="lblTime" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontWeight="Bold" FontSize="170">60</Label>
         </Grid>
         <Grid x:Name="gridMedia" Visibility="Hidden">
