--- a/Server/HostServer/ServerWindow.xaml
+++ b/Server/HostServer/ServerWindow.xaml
@@ -24,6 +24,26 @@
                     <Button x:Name="btnPlayerIntro" Content="Giới thiệu thí sinh" HorizontalAlignment="Left" Margin="10,34,0,0" VerticalAlignment="Top" Click="btnPlayerIntro_Click"/>
                     <Button x:Name="btnPlain" Content="Màn hình video intro" HorizontalAlignment="Left" Margin="176,15,0,0" VerticalAlignment="Top" Click="btnPlain_Click"/>
                     <Button x:Name="btnPoints" Content="Tổng kết điểm" HorizontalAlignment="Left" Margin="176,39,0,0" VerticalAlignment="Top" Click="btnPoints_Click"/>
+                    <Grid HorizontalAlignment="Left" Height="119" Margin="400,20,0,0" VerticalAlignment="Top" Width="370">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                        <Label Grid.Row="0" Grid.Column="0" Content="S1"/>
+                        <Label Grid.Row="1" Grid.Column="0" Content="S2"/>
+                        <Label Grid.Row="2" Grid.Column="0" Content="S3"/>
+                        <Label Grid.Row="3" Grid.Column="0" Content="S4"/>
+                        <Button x:Name="btnKick1" Grid.Row="0" Grid.Column="1" Content="Kick" Click="btnKick1_Click"/>
+                        <Button x:Name="btnKick2" Grid.Row="1" Grid.Column="1" Content="Kick" Click="btnKick2_Click"/>
+                        <Button x:Name="btnKick3" Grid.Row="2" Grid.Column="1" Content="Kick" Click="btnKick3_Click"/>
+                        <Button x:Name="btnKick4" Grid.Row="3" Grid.Column="1" Content="Kick" Click="btnKick4_Click"/>
+                    </Grid>
                 </Grid>
             </TabItem>
             <TabItem x:Name="tabStart" Header="Khởi động">
