--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -10,9 +10,11 @@
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
 
         <Button x:Name="btnClient" Grid.Row="0" Click="btnClient_Click">Client</Button>
         <Button x:Name="btnViewer" Grid.Row="1" Click="btnViewer_Click">Viewer</Button>
+        <Button x:Name="btnMC" Grid.Row="2" Click="btnMC_Click">MC</Button>
     </Grid>
 </Window>
