--- a/Server/HostServer/FinishController.xaml
+++ b/Server/HostServer/FinishController.xaml
@@ -15,10 +15,12 @@
         <StackPanel>
             <Grid Height="100">
                 <Button x:Name="btnVeDich" Content="VỀ ĐÍCH" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Background="Red" Foreground="White" FontWeight="Bold" Click="btnVeDich_Click"/>
-                <Button x:Name="btnSceneQues" Content="Scene Câu hỏi" HorizontalAlignment="Left" Margin="90,50,0,0" VerticalAlignment="Top" Click="btnSceneQues_Click"/>
-                <Button x:Name="btnScenePrac" Content="Scene Thực hành" HorizontalAlignment="Left" Margin="272,15,0,0" VerticalAlignment="Top" Click="btnScenePrac_Click"/>
-                <Button x:Name="btnScenePoint" Content="Scene Chọn điểm" HorizontalAlignment="Left" Margin="81,10,0,0" VerticalAlignment="Top" Click="btnScenePoint_Click"/>
-                <Button x:Name="btnSceneMedia" Content="Scene Media" HorizontalAlignment="Left" Margin="259,60,0,0" VerticalAlignment="Top" Click="btnSceneMedia_Click"/>
+                <Button x:Name="btnSceneQues" Content="Scene Câu hỏi" HorizontalAlignment="Left" Margin="290,43,0,0" VerticalAlignment="Top" Click="btnSceneQues_Click"/>
+                <Button x:Name="btnScenePrac" Content="Scene Thực hành" HorizontalAlignment="Left" Margin="368,19,0,0" VerticalAlignment="Top" Click="btnScenePrac_Click"/>
+                <Button x:Name="btnScenePoint" Content="Scene Chọn điểm" HorizontalAlignment="Left" Margin="274,19,0,0" VerticalAlignment="Top" Click="btnScenePoint_Click"/>
+                <Button x:Name="btnSceneMedia" Content="Scene Media" HorizontalAlignment="Left" Margin="368,43,0,0" VerticalAlignment="Top" Click="btnSceneMedia_Click"/>
+                <Button x:Name="btnIntro" Content="Mở Intro" HorizontalAlignment="Left" Margin="116,28,0,0" VerticalAlignment="Top" Click="btnIntro_Click"/>
+                <Button x:Name="btnOpening" Content="Mở nhạc khai màn" HorizontalAlignment="Left" Margin="101,61,0,0" VerticalAlignment="Top" Click="btnOpening_Click"/>
 
             </Grid>
             <Grid Height="40">
