--- a/Server/HostServer/FinishController.xaml
+++ b/Server/HostServer/FinishController.xaml
@@ -15,19 +15,19 @@
         <StackPanel>
             <Grid Height="100">
                 <Button x:Name="btnVeDich" Content="VỀ ĐÍCH" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Background="Red" Foreground="White" FontWeight="Bold" Click="btnVeDich_Click"/>
-                <Button x:Name="btnSceneQues" Content="Scene Câu hỏi" HorizontalAlignment="Left" Margin="290,43,0,0" VerticalAlignment="Top" Click="btnSceneQues_Click"/>
-                <Button x:Name="btnScenePrac" Content="Scene Thực hành" HorizontalAlignment="Left" Margin="368,19,0,0" VerticalAlignment="Top" Click="btnScenePrac_Click"/>
-                <Button x:Name="btnScenePoint" Content="Scene Chọn điểm" HorizontalAlignment="Left" Margin="274,19,0,0" VerticalAlignment="Top" Click="btnScenePoint_Click"/>
-                <Button x:Name="btnSceneMedia" Content="Scene Media" HorizontalAlignment="Left" Margin="368,43,0,0" VerticalAlignment="Top" Click="btnSceneMedia_Click"/>
-                <Button x:Name="btnIntro" Content="Mở Intro" HorizontalAlignment="Left" Margin="116,28,0,0" VerticalAlignment="Top" Click="btnIntro_Click"/>
-                <Button x:Name="btnOpening" Content="Mở nhạc khai màn" HorizontalAlignment="Left" Margin="101,61,0,0" VerticalAlignment="Top" Click="btnOpening_Click"/>
+                <Button x:Name="btnSceneQues" Content="Scene Câu hỏi" HorizontalAlignment="Left" Margin="290,43,0,0" VerticalAlignment="Top" Click="btnSceneQues_Click" Height="27"/>
+                <Button x:Name="btnScenePrac" Content="Scene Thực hành" HorizontalAlignment="Left" Margin="368,10,0,0" VerticalAlignment="Top" Click="btnScenePrac_Click" Height="28"/>
+                <Button x:Name="btnScenePoint" Content="Scene Chọn điểm" HorizontalAlignment="Left" Margin="274,10,0,0" VerticalAlignment="Top" Click="btnScenePoint_Click" Height="28"/>
+                <Button x:Name="btnSceneMedia" Content="Scene Media" HorizontalAlignment="Left" Margin="368,43,0,0" VerticalAlignment="Top" Click="btnSceneMedia_Click" Height="27"/>
+                <Button x:Name="btnIntro" Content="Mở Intro" HorizontalAlignment="Left" Margin="116,10,0,0" VerticalAlignment="Top" Click="btnIntro_Click" Height="28"/>
+                <Button x:Name="btnOpening" Content="Mở nhạc khai màn" HorizontalAlignment="Left" Margin="100,43,0,0" VerticalAlignment="Top" Click="btnOpening_Click" Height="27"/>
 
             </Grid>
             <Grid Height="40">
-                <Button x:Name="btnS1" Content="Thí sinh 1" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="btnS1_Click"/>
-                <Button x:Name="btnS2" Content="Thí sinh 2" HorizontalAlignment="Left" Margin="70,10,0,0" VerticalAlignment="Top" Click="btnS2_Click"/>
-                <Button x:Name="btnS3" Content="Thí sinh 3" HorizontalAlignment="Left" Margin="130,10,0,0" VerticalAlignment="Top" Click="btnS3_Click"/>
-                <Button x:Name="btnS4" Content="Thí sinh 4" HorizontalAlignment="Left" Margin="190,10,0,0" VerticalAlignment="Top" Click="btnS4_Click"/>
+                <Button x:Name="btnS1" Content="Thí sinh 1" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Click="btnS1_Click" Height="28"/>
+                <Button x:Name="btnS2" Content="Thí sinh 2" HorizontalAlignment="Left" Margin="70,0,0,0" VerticalAlignment="Center" Click="btnS2_Click" Height="28"/>
+                <Button x:Name="btnS3" Content="Thí sinh 3" HorizontalAlignment="Left" Margin="130,0,0,0" VerticalAlignment="Center" Click="btnS3_Click" Height="28"/>
+                <Button x:Name="btnS4" Content="Thí sinh 4" HorizontalAlignment="Left" Margin="190,0,0,0" VerticalAlignment="Center" Click="btnS4_Click" Height="28"/>
             </Grid>
             <Grid x:Name="grdChoosePoint" Height="125" Width="500">
                 <Grid.RowDefinitions>
@@ -125,9 +125,7 @@
                 <Button x:Name="btnPrac" Content="Bắt đầu thực hành" HorizontalAlignment="Left" Margin="111,230,0,0" VerticalAlignment="Top" Click="btnPrac_Click" Height="26"/>
                 <Button x:Name="btnCorrect" Content="Đúng" HorizontalAlignment="Left" Margin="12,269,0,0" VerticalAlignment="Top" Height="37" Width="54" Background="Lime" Click="btnCorrect_Click"/>
                 <Button x:Name="btnWrong" Content="Sai" HorizontalAlignment="Left" Margin="82,269,0,0" VerticalAlignment="Top" Height="37" Width="54" Background="Red" Click="btnWrong_Click"/>
-
-                <Button x:Name="btn5s" Content="5s hút" HorizontalAlignment="Center" Margin="0,230,0,0" VerticalAlignment="Top" Width="54" Click="btn5s_Click" Height="26"/>
-                <Button x:Name="btnSuckPrac" Content="Bắt đầu lại thực hành" HorizontalAlignment="Left" Margin="351,230,0,0" VerticalAlignment="Top" Click="btnSuckPrac_Click" Height="26"/>
+                <Button x:Name="btnSuckPrac" Content="Bắt đầu lại thực hành" HorizontalAlignment="Left" Margin="273,230,0,0" VerticalAlignment="Top" Click="btnSuckPrac_Click" Height="26" Width="132"/>
                 <Button x:Name="btnSuckCorrect" Content="Hút đúng" HorizontalAlignment="Center" Margin="0,269,0,0" VerticalAlignment="Top" Height="37" Width="54" Background="Lime" Click="btnSuckCorrect_Click"/>
                 <Button x:Name="btnSuckWrong" Content="Hút sai" HorizontalAlignment="Left" Margin="351,269,0,0" VerticalAlignment="Top" Height="37" Width="54" Background="Red" Click="btnSuckWrong_Click"/>
                 <Button x:Name="btnMedia" Content="Mở Clip/Ảnh" HorizontalAlignment="Left" Height="38" Margin="12,178,0,0" VerticalAlignment="Top" Width="84" Click="btnMedia_Click"/>
