--- a/Client/PlayerClient/GamesControl/AccelPlayerControl.xaml
+++ b/Client/PlayerClient/GamesControl/AccelPlayerControl.xaml
@@ -15,12 +15,14 @@
         <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="50"/>
-                <ColumnDefinition/>
                 <ColumnDefinition Width="50"/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="100"/>
             </Grid.ColumnDefinitions>
-            <Label x:Name="lblTemp" Content="0" Grid.Column="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="20" FontWeight="Bold"/>
-            <Label x:Name="lblQuestion" Content="Label" Grid.Column="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="17"/>
-            <Label x:Name="lblTime" Content="0" Grid.Column="2" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="14"/>
+            <Label Grid.Column="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18" FontWeight="Bold">TT</Label>
+            <Label x:Name="lblTemp" Content="0" Grid.Column="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18" FontWeight="Bold"/>
+            <Label x:Name="lblQuestion" Content="Label" Grid.Column="2" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="17"/>
+            <Label x:Name="lblTime" Content="0.00" Grid.Column="3" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="20"/>
         </Grid>
         <MediaElement x:Name="mediaPlayer" LoadedBehavior="Manual" Stretch="Uniform" Grid.Row="1"/>
 
