--- a/Client/MCClient/GamesControl/ObstaPlayerControl.xaml
+++ b/Client/MCClient/GamesControl/ObstaPlayerControl.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Client.MCClient.GamesControl"
+             xmlns:local="clr-namespace:Client.PlayerClient.GamesControl"
              xmlns:compo="clr-namespace:Client.MCClient.GamesControl.Components"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
