--- a/Client/PlayerClient/GamesControl/AccelPlayerControl.xaml
+++ b/Client/PlayerClient/GamesControl/AccelPlayerControl.xaml
@@ -24,7 +24,7 @@
             <Label x:Name="lblQuestion" Content="Label" Grid.Column="2" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="17"/>
             <Label x:Name="lblTime" Content="0.00" Grid.Column="3" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="20"/>
         </Grid>
-        <MediaElement x:Name="mediaPlayer" LoadedBehavior="Manual" Stretch="Uniform" Grid.Row="1"/>
+        <MediaElement x:Name="mediaPlayer" LoadedBehavior="Manual" Stretch="Uniform" Grid.Row="1" ScrubbingEnabled="True" Loaded="mediaPlayer_Loaded"/>
 
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
