--- a/Client/PlayerClient/GamesControl/Components/QuestionControl.xaml
+++ b/Client/PlayerClient/GamesControl/Components/QuestionControl.xaml
@@ -11,9 +11,11 @@
             <ColumnDefinition Width="3.5*"/>
             <ColumnDefinition Width="2.5*"/>
         </Grid.ColumnDefinitions>
-        <Label Grid.Column="0">
-            <TextBlock x:Name="txtQuestion" TextWrapping="Wrap" FontSize="20"/>
-        </Label>
+        <ScrollViewer>
+            <Label Grid.Column="0">
+                <TextBlock x:Name="txtQuestion" TextWrapping="Wrap" FontSize="20"/>
+            </Label>
+        </ScrollViewer>
         <MediaElement x:Name="media" Grid.Column="1"/>
     </Grid>
 </UserControl>
